# mosaikbox

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
KeyFinderService/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
KeyFinderService/client/: client.py  regenerate.sh
KeyFinderService/proto/: keyfinder.proto
KeyFinderService/src/: key_utils.cpp  key_utils.h  server.cpp  server.h
app/: main.py
app/analysis/: AnalysisResult.py  Segment.py  audio_processing.py  beats.py  mixability.py  preconditions.py  rhythmic_similarity.py  structural_segmentation.py  text_similarity.py  timbral_roughness.py  timbre_calculation.py  timbre_similarity.py  vocal.py
app/api/routes/: mix_routes.py  song_routes.py  survey_routes.py
app/config/: config.py  path_config.py
app/documents/: survey_document.py
app/exceptions/: custom_exceptions.py
app/key_estimator/: key_distance.py  key_estimator_client.py  key_similarity.py  key_type.py  keyfinder_pb2.py  keyfinder_pb2_grpc.py  regenerate.sh
app/mixing/: audio_filter.py  audio_mixing.py  utils.py
app/models/: analysis_state.py  mix.py  song_schedule.py  survey_response.py
app/services/: audio_loader.py  lyrics_loader.py  mix_service.py  music_source_separation.py  song_schedule_service.py  song_service.py  survey_service.py  timeit_decorator.py  utilities.py
app/stores/: analysis_store.py  session_store.py  song_cache.py
app/task_control/: task_control.py
